--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -32,6 +32,5 @@ subcommands:{{ range . }}
 {{ end -}}
 {{- if $.IsRoot }}
 
-Run '{{ .UsgName }} <subcommand> -h' for more information on specific commands.{{ end }}{{ end }}
-`
+Run '{{ .UsgName }} <subcommand> -h' for more information on specific commands.{{ end }}{{ end }}`
 }
