add custom usage func as field on command instead of param for parse

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -8,6 +8,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 	{{- end }}
 
 	cc := clap.NewCommand("{{ .Parents }}{{ .UsgName }}")
+	cc.CustomUsage = c.usage
 
 	{{- range .Opts }}
 		{{- if ne .Name "h" }}
@@ -22,7 +23,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 		{{- with .EnvVar }}.Env("{{ . }}"){{ end }}
 		{{- if .IsRequired }}.Require(){{ end }}
 	{{- end }}
-	cc.Parse(args, c.usage)
+	cc.Parse(args)
 
 	{{- /* Subcommands. */ -}}
 	{{- with .Subcmds }}
