tidy: remove comment from generated code (intended just for template)

--- a/tmpls/base-unexported.go.tmpl
+++ b/tmpls/base-unexported.go.tmpl
@@ -75,7 +75,7 @@ func (cc *clapCommand) parse(args []string) ([]string, error) {
 		return nil, err
 	}
 
-	// TODO(steve): check for missing required flags when supported
+	{{- /* TODO(steve): check for missing required flags when supported*/}}
 
 	rest := f.Args()
 
