feat: set default values for options and arguments

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -1,5 +1,7 @@
 
 func (c *{{ .TypeName }}) Parse(args []string) {
+	{{- with .Defaults }}
+{{ . }}{{ end }}
 	p := clapCommand{
 		usage: c.UsageHelp,
 
